--- a/campaigns/templates/campaigns/admin_dashboard.html
+++ b/campaigns/templates/campaigns/admin_dashboard.html
@@ -29,8 +29,9 @@
                     <i class="fas fa-chart-line"></i> Back to Dashboard
                 </a>
             {% else %}
-                <a href="?status={{ status_filter }}&view=follow" class="btn btn-primary">
+                <a href="?status={{ status_filter }}&view=follow" class="btn btn-primary position-relative">
                     <i class="fas fa-bell"></i> Follow-up
+                    <span id="admin-follow-badge" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" style="display:none;"></span>
                 </a>
             {% endif %}
         </div>
